[gd_scene load_steps=2 format=3]

[ext_resource type="Script" path="res://scenes/release-manager/pages/page4-publish.gd" id="1"]

[node name="Page4Publish" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1")

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 20
theme_override_constants/margin_top = 16
theme_override_constants/margin_right = 20
theme_override_constants/margin_bottom = 20

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
layout_mode = 2
theme_override_constants/separation = 16

[node name="ItchCard" type="PanelContainer" parent="MarginContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer/VBoxContainer/ItchCard"]
layout_mode = 2
theme_override_constants/separation = 0

[node name="HeaderContainer" type="PanelContainer" parent="MarginContainer/VBoxContainer/ItchCard/VBoxContainer"]
layout_mode = 2

[node name="HeaderMargin" type="MarginContainer" parent="MarginContainer/VBoxContainer/ItchCard/VBoxContainer/HeaderContainer"]
layout_mode = 2
theme_override_constants/margin_left = 10
theme_override_constants/margin_top = 10
theme_override_constants/margin_right = 10
theme_override_constants/margin_bottom = 10

[node name="HeaderRow" type="HBoxContainer" parent="MarginContainer/VBoxContainer/ItchCard/VBoxContainer/HeaderContainer/HeaderMargin"]
layout_mode = 2
theme_override_constants/separation = 8

[node name="ItchCheckBox" type="CheckBox" parent="MarginContainer/VBoxContainer/ItchCard/VBoxContainer/HeaderContainer/HeaderMargin/HeaderRow"]
unique_name_in_owner = true
layout_mode = 2
focus_mode = 0
mouse_default_cursor_shape = 2
text = "itch.io"
tooltip_text = "Publish to itch.io"

[node name="ContentContainer" type="PanelContainer" parent="MarginContainer/VBoxContainer/ItchCard/VBoxContainer"]
layout_mode = 2

[node name="ContentMargin" type="MarginContainer" parent="MarginContainer/VBoxContainer/ItchCard/VBoxContainer/ContentContainer"]
layout_mode = 2
theme_override_constants/margin_left = 10
theme_override_constants/margin_top = 10
theme_override_constants/margin_right = 10
theme_override_constants/margin_bottom = 10

[node name="ItchDetailsMargin" type="MarginContainer" parent="MarginContainer/VBoxContainer/ItchCard/VBoxContainer/ContentContainer/ContentMargin"]
unique_name_in_owner = true
layout_mode = 2

[node name="ItchDetailsVBox" type="VBoxContainer" parent="MarginContainer/VBoxContainer/ItchCard/VBoxContainer/ContentContainer/ContentMargin/ItchDetailsMargin"]
layout_mode = 2
theme_override_constants/separation = 8

[node name="ItchProfileRow" type="HBoxContainer" parent="MarginContainer/VBoxContainer/ItchCard/VBoxContainer/ContentContainer/ContentMargin/ItchDetailsMargin/ItchDetailsVBox"]
layout_mode = 2
theme_override_constants/separation = 5

[node name="Label" type="Label" parent="MarginContainer/VBoxContainer/ItchCard/VBoxContainer/ContentContainer/ContentMargin/ItchDetailsMargin/ItchDetailsVBox/ItchProfileRow"]
custom_minimum_size = Vector2(150, 0)
layout_mode = 2
size_flags_horizontal = 0
size_flags_stretch_ratio = 0.0
text = "Profile Name:"
horizontal_alignment = 2
vertical_alignment = 1
clip_text = true

[node name="ItchProfileLineEdit" type="LineEdit" parent="MarginContainer/VBoxContainer/ItchCard/VBoxContainer/ContentContainer/ContentMargin/ItchDetailsMargin/ItchDetailsVBox/ItchProfileRow"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
placeholder_text = "Your itch.io username"

[node name="ProfileHelpButton" type="Button" parent="MarginContainer/VBoxContainer/ItchCard/VBoxContainer/ContentContainer/ContentMargin/ItchDetailsMargin/ItchDetailsVBox/ItchProfileRow"]
unique_name_in_owner = true
custom_minimum_size = Vector2(32, 31)
layout_mode = 2
focus_mode = 0
mouse_default_cursor_shape = 2
tooltip_text = "What is a profile name?"
text = "?"

[node name="ItchProjectRow" type="HBoxContainer" parent="MarginContainer/VBoxContainer/ItchCard/VBoxContainer/ContentContainer/ContentMargin/ItchDetailsMargin/ItchDetailsVBox"]
layout_mode = 2
theme_override_constants/separation = 5

[node name="Label" type="Label" parent="MarginContainer/VBoxContainer/ItchCard/VBoxContainer/ContentContainer/ContentMargin/ItchDetailsMargin/ItchDetailsVBox/ItchProjectRow"]
custom_minimum_size = Vector2(150, 0)
layout_mode = 2
size_flags_horizontal = 0
size_flags_stretch_ratio = 0.0
text = "Project Name:"
horizontal_alignment = 2
vertical_alignment = 1
clip_text = true

[node name="ItchProjectLineEdit" type="LineEdit" parent="MarginContainer/VBoxContainer/ItchCard/VBoxContainer/ContentContainer/ContentMargin/ItchDetailsMargin/ItchDetailsVBox/ItchProjectRow"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
placeholder_text = "Your project slug on itch.io"

[node name="ProjectHelpButton" type="Button" parent="MarginContainer/VBoxContainer/ItchCard/VBoxContainer/ContentContainer/ContentMargin/ItchDetailsMargin/ItchDetailsVBox/ItchProjectRow"]
unique_name_in_owner = true
custom_minimum_size = Vector2(32, 31)
layout_mode = 2
focus_mode = 0
mouse_default_cursor_shape = 2
tooltip_text = "What is a project slug?"
text = "?"

[node name="ExportTypeRow" type="HBoxContainer" parent="MarginContainer/VBoxContainer/ItchCard/VBoxContainer/ContentContainer/ContentMargin/ItchDetailsMargin/ItchDetailsVBox"]
layout_mode = 2
theme_override_constants/separation = 5

[node name="Label" type="Label" parent="MarginContainer/VBoxContainer/ItchCard/VBoxContainer/ContentContainer/ContentMargin/ItchDetailsMargin/ItchDetailsVBox/ExportTypeRow"]
custom_minimum_size = Vector2(150, 0)
layout_mode = 2
size_flags_horizontal = 0
size_flags_stretch_ratio = 0.0
text = "Selected Platforms:"
horizontal_alignment = 2
vertical_alignment = 1
clip_text = true

[node name="ValueLabel" type="Label" parent="MarginContainer/VBoxContainer/ItchCard/VBoxContainer/ContentContainer/ContentMargin/ItchDetailsMargin/ItchDetailsVBox/ExportTypeRow"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
text = "None selected"
vertical_alignment = 1

[node name="ReviewCard" type="PanelContainer" parent="MarginContainer/VBoxContainer/ItchCard/VBoxContainer/ContentContainer/ContentMargin/ItchDetailsMargin/ItchDetailsVBox"]
unique_name_in_owner = true
layout_mode = 2

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer/VBoxContainer/ItchCard/VBoxContainer/ContentContainer/ContentMargin/ItchDetailsMargin/ItchDetailsVBox/ReviewCard"]
layout_mode = 2
theme_override_constants/separation = 0

[node name="ReviewHeaderContainer" type="PanelContainer" parent="MarginContainer/VBoxContainer/ItchCard/VBoxContainer/ContentContainer/ContentMargin/ItchDetailsMargin/ItchDetailsVBox/ReviewCard/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2

[node name="HeaderMargin" type="MarginContainer" parent="MarginContainer/VBoxContainer/ItchCard/VBoxContainer/ContentContainer/ContentMargin/ItchDetailsMargin/ItchDetailsVBox/ReviewCard/VBoxContainer/ReviewHeaderContainer"]
layout_mode = 2
theme_override_constants/margin_left = 8
theme_override_constants/margin_top = 6
theme_override_constants/margin_right = 8
theme_override_constants/margin_bottom = 6

[node name="ReviewHeaderLabel" type="Label" parent="MarginContainer/VBoxContainer/ItchCard/VBoxContainer/ContentContainer/ContentMargin/ItchDetailsMargin/ItchDetailsVBox/ReviewCard/VBoxContainer/ReviewHeaderContainer/HeaderMargin"]
layout_mode = 2
theme_override_font_sizes/font_size = 14
text = "Pre-Publish Review"

[node name="ReviewContentContainer" type="PanelContainer" parent="MarginContainer/VBoxContainer/ItchCard/VBoxContainer/ContentContainer/ContentMargin/ItchDetailsMargin/ItchDetailsVBox/ReviewCard/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2

[node name="ContentMargin" type="MarginContainer" parent="MarginContainer/VBoxContainer/ItchCard/VBoxContainer/ContentContainer/ContentMargin/ItchDetailsMargin/ItchDetailsVBox/ReviewCard/VBoxContainer/ReviewContentContainer"]
layout_mode = 2
theme_override_constants/margin_left = 8
theme_override_constants/margin_top = 8
theme_override_constants/margin_right = 8
theme_override_constants/margin_bottom = 8

[node name="ReviewContentVBox" type="VBoxContainer" parent="MarginContainer/VBoxContainer/ItchCard/VBoxContainer/ContentContainer/ContentMargin/ItchDetailsMargin/ItchDetailsVBox/ReviewCard/VBoxContainer/ReviewContentContainer/ContentMargin"]
layout_mode = 2
theme_override_constants/separation = 4

[node name="UploadUrlRow" type="HBoxContainer" parent="MarginContainer/VBoxContainer/ItchCard/VBoxContainer/ContentContainer/ContentMargin/ItchDetailsMargin/ItchDetailsVBox/ReviewCard/VBoxContainer/ReviewContentContainer/ContentMargin/ReviewContentVBox"]
layout_mode = 2
theme_override_constants/separation = 5

[node name="Label" type="Label" parent="MarginContainer/VBoxContainer/ItchCard/VBoxContainer/ContentContainer/ContentMargin/ItchDetailsMargin/ItchDetailsVBox/ReviewCard/VBoxContainer/ReviewContentContainer/ContentMargin/ReviewContentVBox/UploadUrlRow"]
layout_mode = 2
theme_override_font_sizes/font_size = 12
text = "Upload URL:"
vertical_alignment = 1

[node name="UploadUrlValue" type="Label" parent="MarginContainer/VBoxContainer/ItchCard/VBoxContainer/ContentContainer/ContentMargin/ItchDetailsMargin/ItchDetailsVBox/ReviewCard/VBoxContainer/ReviewContentContainer/ContentMargin/ReviewContentVBox/UploadUrlRow"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
theme_override_font_sizes/font_size = 12
text = "username.itch.io/project-slug"
vertical_alignment = 1

[node name="VersionRow" type="HBoxContainer" parent="MarginContainer/VBoxContainer/ItchCard/VBoxContainer/ContentContainer/ContentMargin/ItchDetailsMargin/ItchDetailsVBox/ReviewCard/VBoxContainer/ReviewContentContainer/ContentMargin/ReviewContentVBox"]
layout_mode = 2
theme_override_constants/separation = 5

[node name="Label" type="Label" parent="MarginContainer/VBoxContainer/ItchCard/VBoxContainer/ContentContainer/ContentMargin/ItchDetailsMargin/ItchDetailsVBox/ReviewCard/VBoxContainer/ReviewContentContainer/ContentMargin/ReviewContentVBox/VersionRow"]
layout_mode = 2
theme_override_font_sizes/font_size = 12
text = "Version:"
vertical_alignment = 1

[node name="VersionValue" type="Label" parent="MarginContainer/VBoxContainer/ItchCard/VBoxContainer/ContentContainer/ContentMargin/ItchDetailsMargin/ItchDetailsVBox/ReviewCard/VBoxContainer/ReviewContentContainer/ContentMargin/ReviewContentVBox/VersionRow"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
theme_override_font_sizes/font_size = 12
text = "v1.0.0"
vertical_alignment = 1

[node name="ChannelsHeader" type="Label" parent="MarginContainer/VBoxContainer/ItchCard/VBoxContainer/ContentContainer/ContentMargin/ItchDetailsMargin/ItchDetailsVBox/ReviewCard/VBoxContainer/ReviewContentContainer/ContentMargin/ReviewContentVBox"]
layout_mode = 2
theme_override_font_sizes/font_size = 12
text = "Butler Channels:"
modulate = Color(0.7, 0.7, 0.7, 1)

[node name="ChannelsList" type="VBoxContainer" parent="MarginContainer/VBoxContainer/ItchCard/VBoxContainer/ContentContainer/ContentMargin/ItchDetailsMargin/ItchDetailsVBox/ReviewCard/VBoxContainer/ReviewContentContainer/ContentMargin/ReviewContentVBox"]
unique_name_in_owner = true
layout_mode = 2
theme_override_constants/separation = 2

[node name="GithubCard" type="PanelContainer" parent="MarginContainer/VBoxContainer"]
unique_name_in_owner = true
visible = false
layout_mode = 2

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer/VBoxContainer/GithubCard"]
layout_mode = 2
theme_override_constants/separation = 0

[node name="HeaderContainer" type="PanelContainer" parent="MarginContainer/VBoxContainer/GithubCard/VBoxContainer"]
layout_mode = 2

[node name="HeaderMargin" type="MarginContainer" parent="MarginContainer/VBoxContainer/GithubCard/VBoxContainer/HeaderContainer"]
layout_mode = 2
theme_override_constants/margin_left = 10
theme_override_constants/margin_top = 10
theme_override_constants/margin_right = 10
theme_override_constants/margin_bottom = 10

[node name="HeaderRow" type="HBoxContainer" parent="MarginContainer/VBoxContainer/GithubCard/VBoxContainer/HeaderContainer/HeaderMargin"]
layout_mode = 2
theme_override_constants/separation = 8

[node name="GithubCheckBox" type="CheckBox" parent="MarginContainer/VBoxContainer/GithubCard/VBoxContainer/HeaderContainer/HeaderMargin/HeaderRow"]
unique_name_in_owner = true
layout_mode = 2
focus_mode = 0
mouse_default_cursor_shape = 2
text = "GitHub Releases"
tooltip_text = "Publish to GitHub as a release"

[node name="ContentContainer" type="PanelContainer" parent="MarginContainer/VBoxContainer/GithubCard/VBoxContainer"]
layout_mode = 2

[node name="ContentMargin" type="MarginContainer" parent="MarginContainer/VBoxContainer/GithubCard/VBoxContainer/ContentContainer"]
layout_mode = 2
theme_override_constants/margin_left = 10
theme_override_constants/margin_top = 10
theme_override_constants/margin_right = 10
theme_override_constants/margin_bottom = 10

[node name="ComingSoonLabel" type="Label" parent="MarginContainer/VBoxContainer/GithubCard/VBoxContainer/ContentContainer/ContentMargin"]
layout_mode = 2
text = "Coming soon..."
modulate = Color(0.6, 0.6, 0.6, 1)

[node name="PublishButton" type="Button" parent="MarginContainer/VBoxContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(150, 31)
layout_mode = 2
focus_mode = 0
size_flags_horizontal = 0
mouse_default_cursor_shape = 2
disabled = true
text = "Publish"

[node name="StatusLabel" type="Label" parent="MarginContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
